# Premap2

./: .gitignore  CITATIONS.bib  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yaml
PreimageApproxForNNs/auto_LiRPA/: backward_bound.py  bound_general.py  optimize_input_poly.py  parse_graph.py  perturbations.py  test_optimized_bounds.py  utils.py
PreimageApproxForNNs/auto_LiRPA/operators/: activation.py  pooling.py
PreimageApproxForNNs/src/: arguments.py  branching_domains.py  branching_heuristics.py  preimage_batch_approx_relu_split.py  preimage_beta_crown_solver_relu_split.py  preimage_main.py  test_branching_heuristics.py  test_polyhedron_util.py  utils.py
src/: auto_LiRPA  premap
src/premap2/: __init__.py  coverage.py  domains.py  raycast.py  sampling.py  splitting.py  tighten_bounds.py  utils.py  wrapper.py
tests/premap2/: test_coverage.py  test_domains.py  test_raycast.py  test_sampling.py  test_split.py  test_tighten.py  test_utils.py  test_wrapper.py  utils.py
