[project]
name = "premap2"
version = "0.2.0"
description = "Preimage approximations for neural networks"
readme = "README.md"
authors = [
    { name = "Anton Björklund", email = "anton.bjorklund@cs.ox.ac.uk" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy<2.0",
    "onnx>=1.16.0",
    "pyyaml>=6.0.0",
    "torch<2.0",
    "torchvision>=0.12",
    "tqdm>=4.67.0",
    "onnxruntime>=1.20.1",
    "sortedcontainers>=2.4.0",
    "psutil>=6.1.0",
    "onnx2pytorch",
    "setuptools>=75.6.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
onnx2pytorch = { git = "https://github.com/KaidiXu/onnx2pytorch" }

[dependency-groups]
dev = [
    "ipython>=8.30.0",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
    "pytest-cov>=6.1.1",
]

[project.scripts]
premap = "premap2.wrapper:cli"

[tool.pytest.ini_options]
addopts = ["--cov", "--cov-report="]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["src/premap", "src/auto_LiRPA", "PreimageApproxForNNs"]

[tool.ruff.lint]
ignore = ["E741"]

[tool.coverage.run]
branch = true
omit = ["PreimageApproxForNNs/*"]

[tool.coverage.paths]
source = ["src/premap2/"]

[tool.coverage.report]
exclude_also = [
    "print\\(",
    "plt.show",
    "ImportError",
    "torch.cuda",
    "if debug:",
    "@torch.jit.script"
]
